correction of background directory

--- a/Lab3FLEXBOX/index.html
+++ b/Lab3FLEXBOX/index.html
@@ -103,10 +103,10 @@
     <section>
       <h3>Wrapping items</h3>
       <div class="flex-container flex-wrap">
-        <div class="flex-basis-item-50 h-80 background-1">box1</div>
-        <div class="flex-basis-item-50 h-80 background-2">box2</div>
-        <div class="flex-basis-item-50 h-80 background-3">box3</div>
-        <div class="flex-basis-item-50 h-80 background-4">box4</div>
+        <div class="flex-basis-item-50 h-80 background-1"></div>
+        <div class="flex-basis-item-50 h-80 background-2"></div>
+        <div class="flex-basis-item-50 h-80 background-3"></div>
+        <div class="flex-basis-item-50 h-80 background-4"></div>
       </div>
     </section>
   </body>
