--- a/Lab4MyWebsite/index.html
+++ b/Lab4MyWebsite/index.html
@@ -57,10 +57,10 @@
             margin: 4px 2px;
             cursor: pointer;
         }
-        .button:hover{
+            .button:hover{
             background-color: forestgreen;
         }
-        .button:active{
+            .button:active{
             background-color: green;
         }
         .midwrapper{
@@ -73,14 +73,17 @@
             align-items: center;
             flex-direction: row;
         }
-        .textmid {
+        .resume {
+            position: relative;
+            top: 150px;
             margin-left: 230px;
             font-size: 23px;
         }
         .longerpage{
-            height: 4000px;
+            height: 1500px;
         }
     </style>
+
     <title>Antonio's presentation page </title>
 </head>
 
@@ -108,7 +111,7 @@
     </section>
 
     <section class="midwrapper">
-        <div class="textmid">
+        <div class="resume">
             <h1>Education</h1>
             <p>Institute of Data AUT October 2022-April 2023 </p>
             <ul>
@@ -118,10 +121,21 @@
                 <li>React</li>
                 <li>node.js</li>
             </ul>
+            <h1>Work Experience</h1>
+            <p>Institute of Data AUT October 2022-April 2023 </p>
+            <ul>
+                <li>Web Dev</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>React</li>
+                <li>node.js</li>
+            </ul>
         </div>
-        <div class="textmid">
+        <div class="resume">
             <h1>A career change, why? </h1>
-            <p>I have always wanted to engage with computers </p>
+            <p>After working with people and in buzzy and cool restaurants for almost a decade, I have decided to finally follow my passion of software engineering.
+                Computers have always been a big part of my life, I love technology and how it integrates with our everyday life to make things easier. I have a passionate
+                curioisit for AI and maybe one day I will be able to work with it. </p>
         </div>
     </section>
     <div class="longerpage">
